[project]
name = "metasploitable3-arm-tests"
version = "1.0.0"
description = "TDD test suite for Metasploitable3 ARM64 Docker Lab"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-cov==5.0.0",
    "docker==7.1.0",
    "requests==2.33.0",
    "paramiko==5.0.0",
    "pysmb==1.2.9.1",
]
lint = [
    "ruff==0.4.10",
    "mypy==1.10.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=tests --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
